--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						</ul>
 
 						<!-- <ul class="actions"> -->
-							<li><a href="/Noshin Chowdhury Resume 2024.pdf" class="resume-button">Full Resume</a></li>
+							<!-- <li><a href="/Noshin Chowdhury Resume 2024.pdf" class="resume-button">Full Resume</a></li> -->
 						<!-- </ul> -->
 					</nav>
 				</div>
