--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 						</ul>
 
 						<!-- <ul class="actions"> -->
-							<li><a href="/Noshin Chowdhury Resume 2024.pdf" class="resume-button">Full Resume</a></li>
+							<!-- <li><a href="/public/Noshin Chowdhury Resume 2024.pdf" class="resume-button">Full Resume</a></li> -->
+							<a href="assets/Noshin Chowdhury Resume 2024.pdf" target="_blank" rel="noopener noreferrer" class="resume-button">
+								Full Resume
+							</a>
 						<!-- </ul> -->
 					</nav>
 				</div>
