--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
 						</ul>
 
 						<!-- <ul class="actions"> -->
-							<!-- <li><a href="/public/Noshin Chowdhury Resume 2024.pdf" class="resume-button">Full Resume</a></li> -->
-							<a href="assets/Noshin Chowdhury Resume 2024.pdf" target="_blank" rel="noopener noreferrer" class="resume-button">
-								Full Resume
-							</a>
+							<li><a href="resume.html" class="resume-button">Full Resume</a></li>							
+							<!-- <li><a href="assets/Noshin Chowdhury Resume 2024.pdf" target="_blank" rel="noopener noreferrer" class="resume-button">Full Resume</a></li> -->
 						<!-- </ul> -->
 					</nav>
 				</div>
