--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
     <div class="inner">
         <h1 class="major">Full Resume</h1>
         <!-- Embed PDF -->
-        <embed src="/assets/Noshin Chowdhury Resume 2024.pdf" type="application/pdf" width="100%" height="800px" />
+        <embed src="/Noshin Chowdhury Resume 2024.pdf" type="application/pdf" width="100%" height="800px" />
     </div>
 </section>
 
